<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="saving_state_demo_screen">Saving State Demo Screen</string>
    <string name="saving_state_nav_title">Saving State</string>
    <string name="confirm_logout">"Confirm logout: "</string>
</resources>
